--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
     <script type="text/javascript">
         // 🚨 สำคัญมาก! 🚨
         // ให้เอา URL ของโมเดล Teachable Machine ที่คุณสร้างเองมาใส่ที่นี่
-        const URL = "YOUR_TEACHABLE_MACHINE_MODEL_URL_HERE/";
-        const MQTT_TOPIC = "instrument/detection";
+        const URL = "https://teachablemachine.withgoogle.com/models/Dkyi3w0qv/";
+        const MQTT_TOPIC = "New";
 
         let model, webcam, maxPredictions;
         let mqttClient;
